# react-agent

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py
examples/: advanced_usage.py  basic_usage.py  subagent_usage.py
prompts/: original_prompt.md
react_agent/: mcp_client.py  token_tracker.py  utils.py
react_agent/tools/: glob_tool.py
src/react_agent/: __init__.py  agent.py  context_manager.py  mcp_client.py  subagent.py
src/react_agent/tools/: __init__.py  bash_tool.py  filesystem.py  grep_tool.py
tests/: test_agent.py
